--- a/styles.css
+++ b/styles.css
@@ -38,8 +38,8 @@ main {
 .product img {
     max-width: 100%;
     max-height: 10px; /* Alto máximo para la imagen */
-    width: auto;
-    height: auto;
+    width: 10;
+    height: 10;
 
 .product h2 {
     font-size: 1.5rem;
