--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,11 @@ main {
     border: 1px solid #ddd;
     padding: 1rem;
     text-align: center;
-    width: 20px; /* Ancho específico */
-    height: 30px; /* Alto específico */
-
+}
+  
 .product img {
-    max-width: 10%;
-    max-height: 10px; /* Alto máximo para la imagen */
-    width: 10;
-    height: 10;
+    max-width: 100%;
+    height: auto;
 
 .product h2 {
     font-size: 1.5rem;
