--- a/styles.css
+++ b/styles.css
@@ -38,12 +38,13 @@ main {
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
+}
   
 .product img {
     max-width: 100%;
     max-height: 50px
     height: auto;
-
+}
 .product h2 {
     font-size: 1.1rem;
     margin: 0.5rem 0;
