--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,6 @@ img {
 .titulo img {
     margin-right: 10px; /* Añade espacio entre el logo y el texto */
 }
+a:focus {
+    outline: none; /* Oculta el estilo de foco del navegador en los enlaces */
+}
